--- a/2013_2019weather.ipynb
+++ b/2013_2019weather.ipynb
@@ -81,7 +81,7 @@
       "metadata": {
         "id": "bPmmBIoUf0sz",
         "colab_type": "code",
-        "outputId": "9f3dd975-6852-458b-810a-761d21945923",
+        "outputId": "b9487333-53fa-4dd2-c0f2-234b6cf2cc8e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -91,7 +91,7 @@
         "weather_data_2013 = pd.read_csv(Weather_url_2013)\n",
         "weather_data_2013.shape"
       ],
-      "execution_count": 229,
+      "execution_count": 260,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -103,7 +103,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 229
+          "execution_count": 260
         }
       ]
     },
@@ -112,7 +112,7 @@
       "metadata": {
         "id": "gU0mRz5Df4kq",
         "colab_type": "code",
-        "outputId": "f266bfc9-f262-41fc-d492-9c0d1062b8af",
+        "outputId": "0b573351-16fd-40d2-d0f6-27f5abf3570f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 394
@@ -121,7 +121,7 @@
       "source": [
         "weather_data_2013.head()"
       ],
-      "execution_count": 230,
+      "execution_count": 261,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -487,7 +487,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 230
+          "execution_count": 261
         }
       ]
     },
@@ -527,7 +527,7 @@
       },
       "source": [
         "#look at https://stackoverflow.com/questions/39684548/convert-the-string-2-90k-to-2900-or-5-2m-to-5200000-in-pandas-dataframe\n",
-        "DAMAGE_PROPERTY_2013 = dfweather_data_2013['DAMAGE_PROPERTY'].replace({'K': '*1e3', 'M': '*1e6', 'B': '1e9'}, regex=True).map(pd.eval)"
+        "DAMAGE_PROPERTY_2013 = dfweather_data_2013['DAMAGE_PROPERTY'].replace({'K': '*1e3', 'M': '*1e6', 'B': '1e9'}, regex=True).map(pd.eval).astype(int)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -544,6 +544,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nWHXgn-UJRxo",
+        "colab_type": "text"
+      },
+      "source": [
+        "**State Totals**"
+      ]
     },
     {
       "cell_type": "code",
@@ -568,13 +578,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "dab29396-1968-4434-eb79-0b7a7ad2c8a5"
+        "outputId": "a2be92ba-beff-4295-b343-ada70df5da02"
       },
       "source": [
+        "#creates a new dataframe\n",
         "df2013 = pd.DataFrame(newdf2013)\n",
         "df2013.head()"
       ],
-      "execution_count": 248,
+      "execution_count": 267,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -606,27 +617,27 @@
               "    <tr>\n",
               "      <th>0</th>\n",
               "      <td>ALABAMA</td>\n",
-              "      <td>8394450.0</td>\n",
+              "      <td>8394450</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>ALASKA</td>\n",
-              "      <td>30415600.0</td>\n",
+              "      <td>30415600</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>AMERICAN SAMOA</td>\n",
-              "      <td>0.0</td>\n",
+              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
               "      <td>ARIZONA</td>\n",
-              "      <td>154201200.0</td>\n",
+              "      <td>154201200</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>ARKANSAS</td>\n",
-              "      <td>72299100.0</td>\n",
+              "      <td>72299100</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -634,17 +645,154 @@
             ],
             "text/plain": [
               "            STATE  DAMAGE_PROPERTY\n",
-              "0         ALABAMA        8394450.0\n",
-              "1          ALASKA       30415600.0\n",
-              "2  AMERICAN SAMOA              0.0\n",
-              "3         ARIZONA      154201200.0\n",
-              "4        ARKANSAS       72299100.0"
+              "0         ALABAMA          8394450\n",
+              "1          ALASKA         30415600\n",
+              "2  AMERICAN SAMOA                0\n",
+              "3         ARIZONA        154201200\n",
+              "4        ARKANSAS         72299100"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 248
+          "execution_count": 267
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "d--CAlbWJjeb",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Plots**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-ERa5t3SJjFR",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 419
+        },
+        "outputId": "7f0c53ac-26fa-4f2c-a5c8-385434ed9c63"
+      },
+      "source": [
+        "df2013.sort_values(by='DAMAGE_PROPERTY', ascending=False)"
+      ],
+      "execution_count": 271,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>STATE</th>\n",
+              "      <th>DAMAGE_PROPERTY</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>48</th>\n",
+              "      <td>OKLAHOMA</td>\n",
+              "      <td>2023424300</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>20</th>\n",
+              "      <td>ILLINOIS</td>\n",
+              "      <td>1562382000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>56</th>\n",
+              "      <td>TEXAS</td>\n",
+              "      <td>1410698000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>COLORADO</td>\n",
+              "      <td>1003891750</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>36</th>\n",
+              "      <td>MISSISSIPPI</td>\n",
+              "      <td>609917000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>12</th>\n",
+              "      <td>E PACIFIC</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>27</th>\n",
+              "      <td>LAKE MICHIGAN</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>28</th>\n",
+              "      <td>LAKE ST CLAIR</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>29</th>\n",
+              "      <td>LAKE SUPERIOR</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>AMERICAN SAMOA</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>65 rows × 2 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "             STATE  DAMAGE_PROPERTY\n",
+              "48        OKLAHOMA       2023424300\n",
+              "20        ILLINOIS       1562382000\n",
+              "56           TEXAS       1410698000\n",
+              "8         COLORADO       1003891750\n",
+              "36     MISSISSIPPI        609917000\n",
+              "..             ...              ...\n",
+              "12       E PACIFIC                0\n",
+              "27   LAKE MICHIGAN                0\n",
+              "28   LAKE ST CLAIR                0\n",
+              "29   LAKE SUPERIOR                0\n",
+              "2   AMERICAN SAMOA                0\n",
+              "\n",
+              "[65 rows x 2 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 271
         }
       ]
     },
