--- a/2013_2019weather.ipynb
+++ b/2013_2019weather.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "2013-2019weather.ipynb",
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -53,6 +54,44 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8fwzHIUOjmUV",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import altair as alt"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eL3qApa8deDC",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "6db50f7d-7a51-4546-c36a-13f7a5398a6d"
+      },
+      "source": [
+        "pip install -e git+https://github.com/altair-viz/altair.git"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\u001b[31mERROR: Could not detect requirement name for 'git+https://github.com/altair-viz/altair.git', please specify one with #egg=your_package_name\u001b[0m\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "rcOs4YzgfMrj",
@@ -81,7 +120,7 @@
       "metadata": {
         "id": "bPmmBIoUf0sz",
         "colab_type": "code",
-        "outputId": "b9487333-53fa-4dd2-c0f2-234b6cf2cc8e",
+        "outputId": "7275a594-0966-45a1-8bad-44226ce1a1d6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -91,7 +130,7 @@
         "weather_data_2013 = pd.read_csv(Weather_url_2013)\n",
         "weather_data_2013.shape"
       ],
-      "execution_count": 260,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -103,7 +142,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 260
+          "execution_count": 26
         }
       ]
     },
@@ -112,7 +151,7 @@
       "metadata": {
         "id": "gU0mRz5Df4kq",
         "colab_type": "code",
-        "outputId": "0b573351-16fd-40d2-d0f6-27f5abf3570f",
+        "outputId": "a68254d8-7ade-452d-ac8c-56b92057e2e1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 394
@@ -121,7 +160,7 @@
       "source": [
         "weather_data_2013.head()"
       ],
-      "execution_count": 261,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -487,7 +526,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 261
+          "execution_count": 27
         }
       ]
     },
@@ -574,18 +613,18 @@
       "metadata": {
         "id": "-STf-NPSDEx7",
         "colab_type": "code",
+        "outputId": "9ac1bfdc-83d1-4a56-9605-f38b20072d05",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "a2be92ba-beff-4295-b343-ada70df5da02"
+        }
       },
       "source": [
         "#creates a new dataframe\n",
         "df2013 = pd.DataFrame(newdf2013)\n",
         "df2013.head()"
       ],
-      "execution_count": 267,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -655,7 +694,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 267
+          "execution_count": 33
         }
       ]
     },
@@ -674,16 +713,16 @@
       "metadata": {
         "id": "-ERa5t3SJjFR",
         "colab_type": "code",
+        "outputId": "7f0c53ac-26fa-4f2c-a5c8-385434ed9c63",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 419
-        },
-        "outputId": "7f0c53ac-26fa-4f2c-a5c8-385434ed9c63"
+        }
       },
       "source": [
         "df2013.sort_values(by='DAMAGE_PROPERTY', ascending=False)"
       ],
-      "execution_count": 271,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -799,6 +838,77 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "a7tSpqZy0j6u",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "states = {\n",
+        "        'AK': 'Alaska',\n",
+        "        'AL': 'Alabama',\n",
+        "        'AR': 'Arkansas',\n",
+        "        'AS': 'American Samoa',\n",
+        "        'AZ': 'Arizona',\n",
+        "        'CA': 'California',\n",
+        "        'CO': 'Colorado',\n",
+        "        'CT': 'Connecticut',\n",
+        "        'DC': 'District of Columbia',\n",
+        "        'DE': 'Delaware',\n",
+        "        'FL': 'Florida',\n",
+        "        'GA': 'Georgia',\n",
+        "        'GU': 'Guam',\n",
+        "        'HI': 'Hawaii',\n",
+        "        'IA': 'Iowa',\n",
+        "        'ID': 'Idaho',\n",
+        "        'IL': 'Illinois',\n",
+        "        'IN': 'Indiana',\n",
+        "        'KS': 'Kansas',\n",
+        "        'KY': 'Kentucky',\n",
+        "        'LA': 'Louisiana',\n",
+        "        'MA': 'Massachusetts',\n",
+        "        'MD': 'Maryland',\n",
+        "        'ME': 'Maine',\n",
+        "        'MI': 'Michigan',\n",
+        "        'MN': 'Minnesota',\n",
+        "        'MO': 'Missouri',\n",
+        "        'MP': 'Northern Mariana Islands',\n",
+        "        'MS': 'Mississippi',\n",
+        "        'MT': 'Montana',\n",
+        "        'NA': 'National',\n",
+        "        'NC': 'North Carolina',\n",
+        "        'ND': 'North Dakota',\n",
+        "        'NE': 'Nebraska',\n",
+        "        'NH': 'New Hampshire',\n",
+        "        'NJ': 'New Jersey',\n",
+        "        'NM': 'New Mexico',\n",
+        "        'NV': 'Nevada',\n",
+        "        'NY': 'New York',\n",
+        "        'OH': 'Ohio',\n",
+        "        'OK': 'Oklahoma',\n",
+        "        'OR': 'Oregon',\n",
+        "        'PA': 'Pennsylvania',\n",
+        "        'PR': 'Puerto Rico',\n",
+        "        'RI': 'Rhode Island',\n",
+        "        'SC': 'South Carolina',\n",
+        "        'SD': 'South Dakota',\n",
+        "        'TN': 'Tennessee',\n",
+        "        'TX': 'Texas',\n",
+        "        'UT': 'Utah',\n",
+        "        'VA': 'Virginia',\n",
+        "        'VI': 'Virgin Islands',\n",
+        "        'VT': 'Vermont',\n",
+        "        'WA': 'Washington',\n",
+        "        'WI': 'Wisconsin',\n",
+        "        'WV': 'West Virginia',\n",
+        "        'WY': 'Wyoming'\n",
+        "}\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "JBZq2q0ZNpuJ",
         "colab_type": "code",
         "colab": {}
@@ -818,11 +928,11 @@
       "metadata": {
         "id": "jVA5wLJ_OARa",
         "colab_type": "code",
+        "outputId": "e71f1843-4868-4d3a-c0bc-7bdd253c950f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 817
-        },
-        "outputId": "e71f1843-4868-4d3a-c0bc-7bdd253c950f"
+        }
       },
       "source": [
         "fig = go.Figure(data=go.Choropleth(\n",
@@ -841,7 +951,7 @@
         ")\n",
         "fig.show()"
       ],
-      "execution_count": 273,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
