--- a/2013_2019weather.ipynb
+++ b/2013_2019weather.ipynb
@@ -120,7 +120,7 @@
       "metadata": {
         "id": "bPmmBIoUf0sz",
         "colab_type": "code",
-        "outputId": "7275a594-0966-45a1-8bad-44226ce1a1d6",
+        "outputId": "18aceb61-5840-4876-d165-df7f8d9a01e9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -130,7 +130,7 @@
         "weather_data_2013 = pd.read_csv(Weather_url_2013)\n",
         "weather_data_2013.shape"
       ],
-      "execution_count": 26,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -142,7 +142,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 26
+          "execution_count": 43
         }
       ]
     },
@@ -151,7 +151,7 @@
       "metadata": {
         "id": "gU0mRz5Df4kq",
         "colab_type": "code",
-        "outputId": "a68254d8-7ade-452d-ac8c-56b92057e2e1",
+        "outputId": "3f709633-b412-4bbb-e696-b45e984cd829",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 394
@@ -160,7 +160,7 @@
       "source": [
         "weather_data_2013.head()"
       ],
-      "execution_count": 27,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -526,7 +526,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 27
+          "execution_count": 44
         }
       ]
     },
@@ -613,7 +613,7 @@
       "metadata": {
         "id": "-STf-NPSDEx7",
         "colab_type": "code",
-        "outputId": "9ac1bfdc-83d1-4a56-9605-f38b20072d05",
+        "outputId": "0ba85202-df98-482f-c56b-1c4f139ae5d0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -624,7 +624,7 @@
         "df2013 = pd.DataFrame(newdf2013)\n",
         "df2013.head()"
       ],
-      "execution_count": 33,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -694,7 +694,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 33
+          "execution_count": 50
         }
       ]
     },
@@ -713,7 +713,7 @@
       "metadata": {
         "id": "-ERa5t3SJjFR",
         "colab_type": "code",
-        "outputId": "7f0c53ac-26fa-4f2c-a5c8-385434ed9c63",
+        "outputId": "d7c981e5-011e-48d8-fc62-a990a4eafbff",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 419
@@ -722,7 +722,7 @@
       "source": [
         "df2013.sort_values(by='DAMAGE_PROPERTY', ascending=False)"
       ],
-      "execution_count": 0,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -831,7 +831,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 271
+          "execution_count": 51
         }
       ]
     },
@@ -905,6 +905,163 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "C13FADik1hY4",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "df2013['STATE'] = df2013['STATE'].replace({'Alaska':'AK',\n",
+        "        'ALABAMA':'AL',\n",
+        "        'Arkansas':'AR',\n",
+        "        'American Samoa':'AS',\n",
+        "        'Arizona':'AZ',\n",
+        "        'California':'CA',\n",
+        "        'Colorado':'CO',\n",
+        "        'Connecticut':'CT',\n",
+        "        'District of Columbia':'DC',\n",
+        "        'Delaware':'DE',\n",
+        "        'Florida':'FL',\n",
+        "        'Georgia':'GA',\n",
+        "        'Guam':'GU',\n",
+        "        'Hawaii':'HI',\n",
+        "        'Iowa':'IA',\n",
+        "        'Idaho':'ID',\n",
+        "         'Illinois':'IL',\n",
+        "        'Indiana':'IN',\n",
+        "        'Kansas':'KS',\n",
+        "        'Kentucky':'KY',\n",
+        "        'Louisiana':'LA',\n",
+        "        'Massachusetts':'MA',\n",
+        "        'Maryland':'MD',\n",
+        "        'Maine':'ME',\n",
+        "        'Michigan':'MI',\n",
+        "        'Minnesota':'MN',\n",
+        "        'Missouri':'MO',\n",
+        "        'Northern Mariana Islands':'MP',\n",
+        "        'Mississippi':'MS',\n",
+        "        'Montana':'MT',\n",
+        "        'National':'NA',\n",
+        "        'North Carolina':'NC',\n",
+        "        'North Dakota':'ND',\n",
+        "        'Nebraska':'NE',\n",
+        "        'New Hampshire':'NH',\n",
+        "        'New Jersey':'NJ',\n",
+        "        'New Mexico':'NM',\n",
+        "        'Nevada':'NV',\n",
+        "        'New York':'NY',\n",
+        "        'Ohio':'OH',\n",
+        "        'Oklahoma':'OK',\n",
+        "        'Oregon':'OR',\n",
+        "        'Pennsylvania':'PA',\n",
+        "        'Puerto Rico':'PR',\n",
+        "        'Rhode Island':'RI',\n",
+        "        'South Carolina':'SC',\n",
+        "        'South Dakota':'SD',\n",
+        "        'Tennessee':'TN',\n",
+        "        'Texas':'TX',\n",
+        "        'Utah':'UT',\n",
+        "        'Virginia':'VA',\n",
+        "        'Virgin Islands':'VI',\n",
+        "        'Vermont':'VT',\n",
+        "        'Washington':'WA',\n",
+        "        'Wisconsin':'WI',\n",
+        "        'West Virginia':'WV',\n",
+        "        'Wyoming':'WY'}, regex=True)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "N3_AxPYU4SAG",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "outputId": "d425e470-ae25-4c6d-8231-a16ddc1b9f99"
+      },
+      "source": [
+        "df2013.head()"
+      ],
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>STATE</th>\n",
+              "      <th>DAMAGE_PROPERTY</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>AL</td>\n",
+              "      <td>8394450</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>ALASKA</td>\n",
+              "      <td>30415600</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>AMERICAN SAMOA</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>ARIZONA</td>\n",
+              "      <td>154201200</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>ARKANSAS</td>\n",
+              "      <td>72299100</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "            STATE  DAMAGE_PROPERTY\n",
+              "0              AL          8394450\n",
+              "1          ALASKA         30415600\n",
+              "2  AMERICAN SAMOA                0\n",
+              "3         ARIZONA        154201200\n",
+              "4        ARKANSAS         72299100"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 55
+        }
+      ]
     },
     {
       "cell_type": "code",
